# AppliedCryptoTasks

./: README.md
login-brute/rust-login/: .gitignore  Cargo.toml  users.json
login-brute/rust-login/src/: main.rs
login-brute/rust-login/static/: style.css
login-brute/rust-login/templates/: base.html  dashboard.html  index.html  login.html  register.html
login-brute/selenium-brute/: .gitignore  README.md  brute.py  creds.json  requirements.txt  usernames.txt
oauth/: .gitignore  README.md
oauth/auth-server/: package-lock.json  package.json
oauth/auth-server/data/: users.json
oauth/auth-server/src/: index.ts
oauth/auth-server/src/config/: index.ts
oauth/auth-server/src/controllers/: authController.ts
oauth/auth-server/src/middleware/: auth.ts
oauth/auth-server/src/models/: client.ts  index.ts  token.ts  user.ts
oauth/auth-server/src/routes/: index.ts
oauth/auth-server/src/services/: tokenService.ts
oauth/auth-server/src/utils/: storage.ts
oauth/auth-server/src/views/: consent.ejs  dashboard.ejs  error.ejs  login.ejs  register.ejs
oauth/client-app/: package-lock.json  package.json
oauth/client-app/src/: index.ts
oauth/client-app/src/config/: index.ts
oauth/client-app/src/routes/: index.ts
oauth/client-app/src/services/: analyticsService.ts  oauthService.ts
oauth/client-app/src/views/: dashboard.ejs  (+3 more)
oauth/resource-server/: package-lock.json  package.json
oauth/resource-server/data/: notes.json
oauth/resource-server/src/: index.ts
oauth/shared/: package-lock.json  package.json
oauth/shared/src/: index.ts
ssh/: git.md
(+10 files in other folders)
