[package]
name = "rust-login"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
# enable cookie session store in actix-session
actix-session = { version = "0.7", features = ["cookie-session"] }
actix-files = "0.6"
tera = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argon2 = "0.4"
rand = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
anyhow = "1.0"
